split name and frequency

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,9 @@
     <string name="name_hint">Enter your name</string>
     <string name="done">Done</string>
     <string name="no_account">I don\'t have an account yet</string>
+    <string name="name_prompt">What is your name?</string>
+    <string name="frequency_prompt">How often would you like to receive Uplift content?</string>
+    <string name="next">Next</string>
 
     <array name="frequency">
         <item>Every Hour</item>
