changed text of name entry, title of choose categories screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="log_out">Log Out</string>
     <string name="join">Join the</string>
     <string name="community">UpLift Community</string>
+    <string name="choose_categories">Choose Categories</string>
 
     <array name="frequency">
         <item>Every Half Hour</item>
