--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">UpLift</string>
     <string name="btnFinish">FINISH</string>
-    <string name="sign_up">Register</string>
+    <string name="sign_up">Sign Up</string>
     <string name="email_address">Email Address</string>
     <string name="password">Password</string>
     <string name="already_have_account">I already have an account</string>
