back button implemented

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="choose_categories">Choose Categories</string>
     <string name="uplift_msg">Life is hard. Everyone could use a little UpLift every once in awhile!</string>
     <string name="welcome">Welcome...</string>
+    <string name="back">back</string>
 
     <array name="frequency">
         <item>Every Half Hour</item>
