--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="community">UpLift Community</string>
     <string name="settings">Settings</string>
     <string name="update">Update</string>
+    <string name="welcome_back">Welcome back!</string>
     <string name="frequency_milliseconds">Frequency (Milliseconds):</string>
     <string name="choose_categories">Choose Categories</string>
     <string name="uplift_msg">Life is hard. Everyone could use a little UpLift every once in awhile!</string>
