--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,16 @@
     <string name="choose_categories">Choose Categories</string>
     <string name="uplift_msg">Life is hard. Everyone could use a little UpLift every once in awhile!</string>
     <string name="welcome">Welcome...</string>
+    <string name="info_dialog_button">Got it!</string>
+    <string name="info_dialog_content_p1">As a new user, we think you should know a little about what UpLift is all about and
+    how you can customize your experience.</string>
+    <string name="info_dialog_content_p2">UpLift is an app designed to give your mental
+    health a boost with positive content of your choosing, delivered to you
+        via notifications throughout the day.</string>
+    <string name="info_dialog_content_p3">You will have the option to select the type of content you would
+        like to see from a list of categories, as well as how often you would like to receive them.
+        Don\'t worry about your choices too much right now, you can always change them later!</string>
+
 
     <array name="frequency">
         <item>Every Half Hour</item>
