--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,8 @@
     <string name="settings">Settings</string>
     <string name="update">Update</string>
     <string name="frequency_milliseconds">Frequency (Milliseconds):</string>
-    <string name="choose_categories">Choose Categories</string>
+    <string name="latest_uplift">Latest Uplift</string>
+    <string name="choose_categories">Select Content Categories</string>
     <string name="uplift_msg">Life is hard. Everyone could use a little UpLift every once in awhile!</string>
     <string name="welcome">Welcome...</string>
     <string name="info_dialog_button">Got it!</string>
